structure of grid_squares improvements: 1. extract_squares() now return ndarray instead of dict; 2. extended to 4 columns adding the square number (for future boundingbox proportional dimension on distance; 3. ordered to have img square last (better readability during debug)

--- a/full/prepare_data_first_cnn.ipynb
+++ b/full/prepare_data_first_cnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -122,13 +122,18 @@
     "        num_of_already_processed += 1\n",
     "        continue\n",
     "    \n",
+    "    # Extend the information to include piece information in 3rd col (image remain last in 4th col)\n",
+    "    grid_squares = np.column_stack((grid_squares[:,:2], \n",
+    "                                        [true_pos.get(coord, 'empty') for coord in grid_squares[:, 1]],\n",
+    "                                        grid_squares[:,-1]\n",
+    "                                        ))\n",
     "    \n",
-    "    for square_coord, square_img in grid_squares.items():\n",
+    "    for square_coord, piece, square_img in grid_squares[:,1:]:\n",
     "        output_filename = f'./../output/training_squares/{imgnumber}_{square_coord}'\n",
     "        cv2.imwrite(output_filename + '.png', square_img)\n",
     "\n",
     "        with open(f'{output_filename}.txt', 'w') as f:\n",
-    "            f.write(true_pos[square_coord] if square_coord in true_pos else 'empty')\n",
+    "            f.write(piece)\n",
     "    \n",
     "    print('Done')\n",
     "\n",
