--- a/full/prepare_data_first_cnn.ipynb
+++ b/full/prepare_data_first_cnn.ipynb
@@ -122,21 +122,150 @@
     "        num_of_already_processed += 1\n",
     "        continue\n",
     "    \n",
-    "    # Extend the information to include piece information in 3rd col (image remain last in 4th col)\n",
-    "    grid_squares = np.column_stack((grid_squares[:,:2], \n",
-    "                                        [true_pos.get(coord, 'empty') for coord in grid_squares[:, 1]],\n",
-    "                                        grid_squares[:,-1]\n",
-    "                                        ))\n",
     "    \n",
-    "    for square_coord, piece, square_img in grid_squares[:,1:]:\n",
+    "    for square_coord, square_img in grid_squares.items():\n",
     "        output_filename = f'./../output/training_squares/{imgnumber}_{square_coord}'\n",
     "        cv2.imwrite(output_filename + '.png', square_img)\n",
     "\n",
     "        with open(f'{output_filename}.txt', 'w') as f:\n",
-    "            f.write(piece)\n",
+    "            f.write(true_pos[square_coord] if square_coord in true_pos else 'empty')\n",
     "    \n",
     "    print('Done')\n",
     "\n",
+    "    num_of_already_processed += 1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not os.path.exists('./../output/training_pieces/'):\n",
+    "    os.mkdir('./../output/training_pieces/')\n",
+    "\n",
+    "to_be_processed = glob.glob('./../input/**0000**')\n",
+    "already_processed = glob.glob('./../output/traininq_pieces/**')\n",
+    "already_processed = list(set([os.path.splitext(filename)[0].split('\\\\')[-1].split('_')[0] for filename in already_processed]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./../input\\0000.png... Done\n",
+      "./../input\\0001.png... Done\n",
+      "########################### progress: 12.5% ###########################\n",
+      "\n",
+      "./../input\\0024.png... Done\n",
+      "./../input\\0026.png... Done\n",
+      "########################### progress: 25.0% ###########################\n",
+      "\n",
+      "./../input\\0039.png... Not enough lines found, provide a better image\n",
+      "Skipped\n",
+      "./../input\\0060.png... Done\n",
+      "########################### progress: 37.5% ###########################\n",
+      "\n",
+      "./../input\\0081.png... Not enough lines found, provide a better image\n",
+      "Skipped\n",
+      "./../input\\0132.png... Done\n",
+      "########################### progress: 50.0% ###########################\n",
+      "\n",
+      "./../input\\0192.png... Done\n",
+      "./../input\\0195.png... Not enough lines found, provide a better image\n",
+      "Skipped\n",
+      "########################### progress: 62.5% ###########################\n",
+      "\n",
+      "./../input\\0206.png... Done\n",
+      "./../input\\0231.png... Done\n",
+      "########################### progress: 75.0% ###########################\n",
+      "\n",
+      "./../input\\0280.png... Done\n",
+      "./../input\\0292.png... Done\n",
+      "########################### progress: 87.5% ###########################\n",
+      "\n",
+      "./../input\\0317.png... Not enough lines found, provide a better image\n",
+      "Skipped\n",
+      "./../input\\0347.png... Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_of_to_be_processed = len(to_be_processed)//2\n",
+    "num_of_already_processed = 0\n",
+    "last_progress_percentage_shown = 0\n",
+    "\n",
+    "for in_process in to_be_processed:\n",
+    "    imgnumber = os.path.splitext(in_process)[0].split('\\\\')[-1]\n",
+    "\n",
+    "    #percentage update\n",
+    "    progress_percentage = num_of_already_processed / num_of_to_be_processed * 100\n",
+    "    if progress_percentage - last_progress_percentage_shown > 10:\n",
+    "        last_progress_percentage_shown = progress_percentage\n",
+    "        print(f\"########################### progress: {progress_percentage}% ###########################\\n\")\n",
+    "\n",
+    "    # skip if not a file image, if json does not exists, if already present in output\n",
+    "    if not os.path.isfile(in_process):\n",
+    "        continue\n",
+    "    if not in_process.lower().endswith(\".png\"):\n",
+    "        continue\n",
+    "    print(f\"{in_process}...\", end=' ')\n",
+    "    if not os.path.isfile(os.path.splitext(in_process)[0] + '.json'):\n",
+    "        print(f\"Not found related json({in_process})\")\n",
+    "        continue\n",
+    "    if imgnumber in already_processed:\n",
+    "        num_of_already_processed += 1\n",
+    "        print(f\"Already processed, skipped({in_process})\")\n",
+    "        continue\n",
+    "\n",
+    "    # First pass preprocessing\n",
+    "    warpedBoardImg = board_detection(in_process, \n",
+    "                                        f\"{'output_' + imgnumber}\",\n",
+    "                                        verbose_show=False, \n",
+    "                                        verbose_output=False)\n",
+    "    if warpedBoardImg is None:\n",
+    "        num_of_already_processed += 1\n",
+    "        print(\"Skipped\")\n",
+    "        continue\n",
+    "\n",
+    "    # load FEN true label\n",
+    "    truth = FEN(os.path.splitext(in_process)[0])\n",
+    "    true_fen, true_pos, viewpoint = truth.fen, truth.pieces, truth.view\n",
+    "    \n",
+    "    #Second pass preprocessing\n",
+    "    grid_squares = grid_detection(warpedBoardImg,\n",
+    "                                viewpoint,\n",
+    "                                verbose_show=False)\n",
+    "    if grid_squares is None:\n",
+    "        print(\"Skipped\")\n",
+    "        num_of_already_processed += 1\n",
+    "        continue\n",
+    "    \n",
+    "    # Extend the information to include piece information in 3rd col (image remain last in 4th col)\n",
+    "    grid_squares = np.column_stack((grid_squares[:,:2], \n",
+    "                                        [true_pos.get(coord, 'empty') for coord in grid_squares[:, 1]],\n",
+    "                                        grid_squares[:,-2:]\n",
+    "                                        ))\n",
+    "    \n",
+    "    for square_no, square_coord, piece, square_img, piece_img in grid_squares[:]:\n",
+    "        if piece == 'empty':\n",
+    "            continue\n",
+    "        output_filename = f'./../output/training_pieces/{imgnumber}_{square_coord}'\n",
+    "        \n",
+    "        # .txt\n",
+    "        with open(f'{output_filename}.txt', 'w') as f:\n",
+    "            f.write(piece)\n",
+    "        \n",
+    "        # .png\n",
+    "        cv2.imwrite(output_filename + '.png', piece_img)\n",
+    "\n",
+    "    print('Done')\n",
     "    num_of_already_processed += 1\n",
     "    "
    ]
