new bbox function

--- a/full/prepare_data_first_cnn.ipynb
+++ b/full/prepare_data_first_cnn.ipynb
@@ -35,40 +35,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./../input\\0000.png... Done\n",
-      "./../input\\0001.png... Done\n",
+      "./../input\\0000.png... Already processed, skipped(./../input\\0000.png)\n",
+      "./../input\\0001.png... Already processed, skipped(./../input\\0001.png)\n",
       "########################### progress: 12.5% ###########################\n",
       "\n",
-      "./../input\\0024.png... Done\n",
-      "./../input\\0026.png... Done\n",
+      "./../input\\0024.png... Already processed, skipped(./../input\\0024.png)\n",
+      "./../input\\0026.png... Already processed, skipped(./../input\\0026.png)\n",
       "########################### progress: 25.0% ###########################\n",
       "\n",
       "./../input\\0039.png... Not enough lines found, provide a better image\n",
       "Skipped\n",
-      "./../input\\0060.png... Done\n",
+      "./../input\\0060.png... Already processed, skipped(./../input\\0060.png)\n",
       "########################### progress: 37.5% ###########################\n",
       "\n",
       "./../input\\0081.png... Not enough lines found, provide a better image\n",
       "Skipped\n",
-      "./../input\\0132.png... Done\n",
+      "./../input\\0132.png... Already processed, skipped(./../input\\0132.png)\n",
       "########################### progress: 50.0% ###########################\n",
       "\n",
-      "./../input\\0192.png... Done\n",
+      "./../input\\0192.png... Already processed, skipped(./../input\\0192.png)\n",
       "./../input\\0195.png... Not enough lines found, provide a better image\n",
       "Skipped\n",
       "########################### progress: 62.5% ###########################\n",
       "\n",
-      "./../input\\0206.png... Done\n",
-      "./../input\\0231.png... Done\n",
+      "./../input\\0206.png... Already processed, skipped(./../input\\0206.png)\n",
+      "./../input\\0231.png... Already processed, skipped(./../input\\0231.png)\n",
       "########################### progress: 75.0% ###########################\n",
       "\n",
-      "./../input\\0280.png... Done\n",
-      "./../input\\0292.png... Done\n",
+      "./../input\\0280.png... Already processed, skipped(./../input\\0280.png)\n",
+      "./../input\\0292.png... Already processed, skipped(./../input\\0292.png)\n",
       "########################### progress: 87.5% ###########################\n",
       "\n",
       "./../input\\0317.png... Not enough lines found, provide a better image\n",
       "Skipped\n",
-      "./../input\\0347.png... Done\n"
+      "./../input\\0347.png... Already processed, skipped(./../input\\0347.png)\n"
      ]
     }
    ],
@@ -138,21 +138,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "if not os.path.exists('./../output/training_pieces/'):\n",
     "    os.mkdir('./../output/training_pieces/')\n",
     "\n",
-    "to_be_processed = glob.glob('./../input/**0000**')\n",
+    "to_be_processed = glob.glob('./../input/**')\n",
     "already_processed = glob.glob('./../output/traininq_pieces/**')\n",
     "already_processed = list(set([os.path.splitext(filename)[0].split('\\\\')[-1].split('_')[0] for filename in already_processed]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
