Divided script data creation into 2, one for each data task, and other

--- a/full/prepare_data_second_cnn.ipynb
+++ b/full/prepare_data_second_cnn.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Script prepare data square occupation\n",
-    "Script to create training image data for the CNN that classify an empty or occupied square.\n",
+    "# Script prepare data piece classification\n",
+    "Script to create training image data for the CNN that classifies an image containing a piece.\n",
     "\n",
-    "For each single square create:\n",
+    "For each piece bounding box:\n",
     "- Image named as \"<dataset image no.>_<square coord>.png\"\n",
     "- Text file \"<dataset image no.>_<square coord>.txt\" containing the true label"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,28 +28,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Change path according to where you have the dataset folder, default input dir\n",
-    "\n",
-    "Change path according to where you prefer having the output\n",
+    "input_img_path: Change path according to where you have the dataset folder, default input dir\n",
     "\n",
     "Regex:\n",
     "- path/1** : start with '1' (1000 to 1999)\n",
-    "- path/** : all\n"
+    "- path/** : all\n",
+    "\n",
+    "dst_dir_path: Change path according to where you prefer having the output\n",
+    "\n",
+    "rewrite: Set 'True' to rewrite old already processed images found in the output dir "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "input_img_path = './../input/**'\n",
-    "dst_dir_path = './../output/training_squares/'"
+    "dst_dir_path = './../output/training_pieces/'\n",
+    "rewrite = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,13 +60,15 @@
     "    os.mkdir(dst_dir_path)\n",
     "\n",
     "to_be_processed = glob.glob(input_img_path)\n",
-    "already_processed = glob.glob(f'{dst_dir_path}**')\n",
-    "already_processed = list(set([os.path.splitext(filename)[0].split('\\\\')[-1].split('_')[0] for filename in already_processed]))"
+    "already_processed = []\n",
+    "if not rewrite:\n",
+    "    already_processed = glob.glob(f'{dst_dir_path}**')\n",
+    "    already_processed = list(set([os.path.splitext(filename)[0].split('\\\\')[-1].split('_')[0] for filename in already_processed]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -115,13 +120,13 @@
     "for in_process in to_be_processed:\n",
     "    imgnumber = os.path.splitext(in_process)[0].split('\\\\')[-1]\n",
     "\n",
-    "    # percentage update\n",
+    "    #percentage update\n",
     "    progress_percentage = num_of_already_processed / num_of_to_be_processed * 100\n",
     "    if progress_percentage - last_progress_percentage_shown > 10:\n",
     "        last_progress_percentage_shown = progress_percentage\n",
     "        print(f\"########################### progress: {progress_percentage}% ###########################\\n\")\n",
     "\n",
-    "    #skip if not a file image, if json does not exists, if already present in output\n",
+    "    # skip if not a file image, if json does not exists, if already present in output\n",
     "    if not os.path.isfile(in_process):\n",
     "        continue\n",
     "    if not in_process.lower().endswith(\".png\"):\n",
@@ -134,19 +139,22 @@
     "        num_of_already_processed += 1\n",
     "        print(f\"Already processed, skipped({in_process})\")\n",
     "        continue\n",
-    "\n",
+    "    \n",
     "    # load FEN true label\n",
     "    truth = FEN(os.path.splitext(in_process)[0])\n",
     "    true_fen, true_pos, viewpoint = truth.fen, truth.pieces, truth.view\n",
     "    \n",
     "    # First pass preprocessing\n",
-    "    warpedBoardImg = board_detection(in_process, f\"{'output_' + imgnumber}\")\n",
+    "    warpedBoardImg = board_detection(in_process, \n",
+    "                                        f\"{'output_' + imgnumber}\",\n",
+    "                                        verbose_show=False, \n",
+    "                                        verbose_output=False)\n",
     "    if warpedBoardImg is None:\n",
     "        num_of_already_processed += 1\n",
     "        print(\"Skipped\")\n",
     "        continue\n",
     "\n",
-    "    # Second pass preprocessing\n",
+    "    #Second pass preprocessing\n",
     "    grid_squares = grid_detection(warpedBoardImg, viewpoint)\n",
     "    if grid_squares is None:\n",
     "        print(\"Skipped\")\n",
@@ -159,15 +167,19 @@
     "                                        grid_squares[:,-2:]\n",
     "                                        ))\n",
     "    \n",
-    "    for square_coord, piece, square_img in grid_squares[:,1:4]:\n",
+    "    for square_no, square_coord, piece, square_img, piece_img in grid_squares[:]:\n",
+    "        if piece == 'empty':\n",
+    "            continue\n",
     "        output_filename = f'{dst_dir_path}{imgnumber}_{square_coord}'\n",
-    "        cv2.imwrite(output_filename + '.png', square_img)\n",
-    "\n",
+    "        \n",
+    "        # .txt\n",
     "        with open(f'{output_filename}.txt', 'w') as f:\n",
-    "            f.write(true_pos[square_coord] if square_coord in true_pos else 'empty')\n",
-    "    \n",
-    "    print('Done')\n",
+    "            f.write(piece)\n",
+    "        \n",
+    "        # .png\n",
+    "        cv2.imwrite(output_filename + '.png', piece_img)\n",
     "\n",
+    "    print('Done')\n",
     "    num_of_already_processed += 1\n",
     "    "
    ]
