basic save model, to be improved

--- a/scratch-cnn/cnn.ipynb
+++ b/scratch-cnn/cnn.ipynb
@@ -426,6 +426,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved CNN_80x80_2Conv_2Pool_2FC.pth\n"
+     ]
+    }
+   ],
+   "source": [
+    "# TODO: both training and save should loop among models when there will be more than one model\n",
+    "model_saves_path = './../scratch-cnn/modelsaves/'\n",
+    "\n",
+    "if not os.path.exists(model_saves_path):\n",
+    "    os.mkdir(model_saves_path)\n",
+    "\n",
+    "# NOTE: forse conviene save(model) invece di model.state_dict perche' intanto non \n",
+    "#       abbiamo operazioni particolari, solo fare load()\n",
+    "torch.save(model.state_dict(), f\"{model_saves_path}{model._get_name()}.pth\")\n",
+    "print(f\"Saved {model._get_name()}.pth\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
