handle errors to avoid noisy data and breaks

--- a/full/prepare_data_second_cnn.ipynb
+++ b/full/prepare_data_second_cnn.ipynb
@@ -144,42 +144,48 @@
     "    truth = FEN(os.path.splitext(in_process)[0])\n",
     "    true_fen, true_pos, viewpoint = truth.fen, truth.pieces, truth.view\n",
     "    \n",
-    "    # First pass preprocessing\n",
-    "    warpedBoardImg = board_detection(in_process, \n",
-    "                                        f\"{'output_' + imgnumber}\",\n",
-    "                                        verbose_show=False, \n",
-    "                                        verbose_output=False)\n",
-    "    if warpedBoardImg is None:\n",
-    "        num_of_already_processed += 1\n",
-    "        print(\"Skipped\")\n",
-    "        continue\n",
-    "\n",
-    "    #Second pass preprocessing\n",
-    "    grid_squares = grid_detection(warpedBoardImg, viewpoint)\n",
-    "    if grid_squares is None:\n",
-    "        print(\"Skipped\")\n",
-    "        num_of_already_processed += 1\n",
-    "        continue\n",
-    "    \n",
-    "    # Extend the information to include piece information in 3rd col (image remain last in 4th col)\n",
-    "    grid_squares = np.column_stack((grid_squares[:,:2], \n",
-    "                                        [true_pos.get(coord, 'empty') for coord in grid_squares[:, 1]],\n",
-    "                                        grid_squares[:,-2:]\n",
-    "                                        ))\n",
-    "    \n",
-    "    for square_no, square_coord, piece, square_img, piece_img in grid_squares[:]:\n",
-    "        if piece == 'empty':\n",
+    "    try:\n",
+    "        # First pass preprocessing\n",
+    "        warpedBoardImg = board_detection(in_process, \n",
+    "                                            f\"{'output_' + imgnumber}\",\n",
+    "                                            verbose_show=False, \n",
+    "                                            verbose_output=False)\n",
+    "        if warpedBoardImg is None:\n",
+    "            num_of_already_processed += 1\n",
+    "            print(\"Skipped\")\n",
     "            continue\n",
-    "        output_filename = f'{dst_dir_path}{imgnumber}_{square_coord}'\n",
-    "        \n",
-    "        # .txt\n",
-    "        with open(f'{output_filename}.txt', 'w') as f:\n",
-    "            f.write(piece)\n",
-    "        \n",
-    "        # .png\n",
-    "        cv2.imwrite(output_filename + '.png', piece_img)\n",
     "\n",
-    "    print('Done')\n",
+    "        #Second pass preprocessing\n",
+    "        grid_squares = grid_detection(warpedBoardImg, viewpoint)\n",
+    "        if grid_squares is None:\n",
+    "            print(\"Skipped\")\n",
+    "            num_of_already_processed += 1\n",
+    "            continue\n",
+    "        \n",
+    "        # Extend the information to include piece information in 3rd col (image remain last in 4th col)\n",
+    "        grid_squares = np.column_stack((grid_squares[:,:2], \n",
+    "                                            [true_pos.get(coord, 'empty') for coord in grid_squares[:, 1]],\n",
+    "                                            grid_squares[:,-2:]\n",
+    "                                            ))\n",
+    "        \n",
+    "        for square_no, square_coord, piece, square_img, piece_img in grid_squares[:]:\n",
+    "            if piece == 'empty':\n",
+    "                continue\n",
+    "            output_filename = f'{dst_dir_path}{imgnumber}_{square_coord}'\n",
+    "            \n",
+    "            # .png\n",
+    "            cv2.imwrite(output_filename + '.png', piece_img)\n",
+    "            \n",
+    "            # .txt\n",
+    "            with open(f'{output_filename}.txt', 'w') as f:\n",
+    "                f.write(piece)\n",
+    "            \n",
+    "        print('Done')\n",
+    "    \n",
+    "    except:\n",
+    "        output_filename = f'{dst_dir_path}{imgnumber}_error'\n",
+    "        with open(f'{output_filename}.txt', 'w') as f:\n",
+    "                f.write('Error somewhere')\n",
     "    num_of_already_processed += 1\n",
     "    "
    ]
