aggiunta ResNet50 e modifiche markdown ResNet18 file

--- a/mask-rcnn-fede/ResNet.ipynb
+++ b/mask-rcnn-fede/ResNet.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ResNet 18"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -19,10 +26,16 @@
     "import torchvision.transforms as transforms\n",
     "from PIL import Image\n",
     "from torch.utils.data import Dataset, DataLoader\n",
-    "import torch.nn.functional as F\n",
     "\n",
     "# Check if a GPU is available\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Setup dataset"
    ]
   },
   {
@@ -33,6 +46,16 @@
    "source": [
     "if not os.path.exists('./../output/only_pieces/'):\n",
     "    os.mkdir('./../output/only_pieces/')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Directory tree:\n",
+    "- /output/only_pieces\n",
+    "    - w_Queen\n",
+    "    - ..."
    ]
   },
   {
@@ -220,6 +243,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train, test e val"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -309,6 +339,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Trasformazioni immagini"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -377,6 +414,13 @@
     "# Define loss function and optimizer\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(resnet_model.parameters(), lr=0.001)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Train Model"
    ]
   },
   {
