Fix and rerun to update errors.txt

--- a/full/prepare_data_first_cnn.ipynb
+++ b/full/prepare_data_first_cnn.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,45 +41,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "input_img_path = './../input/**'\n",
     "dst_dir_path = './../output/training_squares/'\n",
-    "rewrite = True\n",
-    "dataset_percentage = 1\n",
-    "save_output = True"
+    "rewrite = False\n",
+    "rewrite_errors = False\n",
+    "dataset_percentage = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import ast\n",
-    "with open(\"errors.txt\", \"r\") as file:\n",
-    "  error_list = ast.literal_eval(file.read())"
+    "if os.path.isfile(\"errors.txt\") or rewrite_errors:\n",
+    "  with open(\"errors.txt\", \"r\") as file:\n",
+    "    error_list = ast.literal_eval(file.read())\n",
+    "else:\n",
+    "  error_list = []\n",
+    "errors_found = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "os.makedirs(dst_dir_path, exist_ok=True)\n",
     "\n",
-    "to_be_processed = glob.glob(input_img_path)\n",
+    "all_input_files = glob.glob(input_img_path)\n",
+    "\n",
+    "already_processed = []\n",
     "if not rewrite:\n",
     "    already_processed = glob.glob(f'{dst_dir_path}**')\n",
     "    already_processed = list(set([os.path.splitext(filename)[0].split('\\\\')[-1].split('_')[0] for filename in already_processed]))\n",
-    "\n",
-    "already_processed = []\n",
     "already_processed.sort()\n",
     "\n",
-    "all_input_files = glob.glob(input_img_path)\n",
     "to_be_processed = [filename for filename in all_input_files\n",
     "                   if '.json' not in filename\n",
     "                   and os.path.splitext(filename)[0].split('\\\\')[-1] not in already_processed\n",
@@ -93,13 +96,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cut_index = int(len(to_be_processed) * dataset_percentage - len(already_processed))\n",
-    "to_be_processed = to_be_processed[:cut_index]\n",
-    "to_be_processed.sort()\n",
-    "\n",
-    "if cut_index < 0:\n",
-    "  exceeded = True\n",
-    "\n",
     "print(f\"Already processed: {len(already_processed)}\")\n",
     "print(f\"To be processed: {len(to_be_processed)}\")"
    ]
@@ -182,10 +178,8 @@
     "        print('Done')\n",
     "\n",
     "    except:\n",
-    "        output_filename = f'{dst_dir_path}{imgnumber}_error'\n",
-    "        with open(f'{output_filename}.txt', 'w') as f:\n",
-    "                f.write('Error somewhere')\n",
-    "            \n",
+    "        errors_found.append(imgnumber)\n",
+    "\n",
     "    num_of_already_processed += 1\n",
     "        "
    ]
@@ -203,17 +197,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "errors = glob.glob(f'{dst_dir_path}**error**')\n",
+    "print(f\"Found {len(errors_found)} to be deleted\")\n",
     "\n",
-    "errors = list(set([os.path.splitext(filename)[0].split('\\\\')[-1].split('_')[0] for filename in errors]))\n",
-    "print(f\"Found {len(errors)} to be deleted\")\n",
-    "\n",
-    "for error in errors:\n",
+    "for error in errors_found:\n",
     "    for filename in glob.glob(f\"{dst_dir_path}*{error}*\"):\n",
     "        os.remove(filename)\n",
     "\n",
-    "errors.sort()\n",
-    "print(f\"errors deleted: {errors}\")"
+    "errors_found.sort()\n",
+    "print(f\"Errors found: {errors_found}\")"
    ]
   },
   {
@@ -230,9 +221,10 @@
    "outputs": [],
    "source": [
     "with open(\"errors.txt\", \"w\") as f:\n",
-    "  total_errors = list(set(error_list + errors))\n",
+    "  total_errors = list(set(error_list + errors_found))\n",
+    "  total_errors.sort()\n",
     "  print(f\"In total {len(total_errors)} errors, save in errors.txt\")\n",
-    "  f.write(str(list(set(error_list + errors))))"
+    "  f.write(str(total_errors))"
    ]
   }
  ],
